--- a/src/App.css
+++ b/src/App.css
@@ -41,7 +41,7 @@
 /* custom css */
 
 body {
-  background: #fdc11b;
+  background: #fff47a;
 }
 
 .main-background {
@@ -49,12 +49,26 @@ body {
   /* width: 300vh; */
   background-repeat: no-repeat;
   background-size: 100% 100%;
-  height: 70vh
+  height: 90vh;
 }
 
 .main-heading {
   margin-left: 20%;
   padding-top: 15px;
+  display: flex;
+}
+
+.sun {
+  margin-left: 15%;
+  animation: sun 5s linear infinite;
+}
+
+@keyframes sun {
+  50% {
+    scale: 1.3;
+    transform: translateX(-50px);
+    transform: rotate(15deg);
+  }
 }
 
 .blink {
@@ -69,20 +83,25 @@ body {
 }
 
 .main_wish {
-  height: 25vh;
+  height: 28vh;
   padding-top: 3vh;
 }
 
 @media only screen and (max-width: 600px) {
   .main_wish {
-    height: 10vh;
+    height: 9.5vh;
   }
 
   .main-heading {
-    margin-left: 12%;
+    margin-left: 5%;
     padding-top: 0px;
   }
-    .main-background {
-      height: 30vh
-    }
+
+  .main-background {
+    height: 30vh
+  }
+
+  .sun {
+    margin-left: 0%;
+  }
 }
